--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,14 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
-  src: local('Open Sans'), local('OpenSans'),
-       url('./assets/fonts/OpenSans-Regular.ttf') format('truetype'); /* Safari, Android, iOS */
+  src: local('Open Sans'), local('OpenSans'), url('./assets/fonts/OpenSans-Regular.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Open Sans';
   font-style: bold;
   font-weight: 700;
-  src: local('Open Sans'), local('OpenSans'),
-  url('./assets/fonts/OpenSans-Bold.ttf') format('truetype'); /* Safari, Android, iOS */
+  src: local('Open Sans'), local('OpenSans'), url('./assets/fonts/OpenSans-Bold.ttf') format('truetype');
 }
 
 body {
