--- a/src/components/Navigation/SideDrawer/SideDrawer.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.css
@@ -18,11 +18,11 @@
     }
 }
 
-.Open {
+.SideDrawer.Open {
     transform: translateX(0);
 }
 
-.Closed {
+.SideDrawer.Closed {
     transform: translateX(-100%);
 }
 
