--- a/src/components/UI/Button/Button.css
+++ b/src/components/UI/Button/Button.css
@@ -10,15 +10,15 @@
     font-weight: bold;
 }
 
-.Button:first-of-type {
+/* .Button:first-of-type {
     margin-left: 0;
     padding-left: 0;
-}
+} */
 
 .Success {
     color: #5C9210;
 }
 
-.Danger {
+.Warn {
     color: #944317;
 }
