--- a/src/components/Order/Order.css
+++ b/src/components/Order/Order.css
@@ -1,8 +1,36 @@
 .Order {
-    width: 100%;
+    width: 80%;
     border: 1px solid #eee;
     box-shadow: 0 2px 3px #ccc;
     padding: 10px;
     margin: 10px auto;
     box-sizing: border-box;
+    text-align: center;
 }
+
+.BurgerWrapper {
+    width: 100%;
+    margin: auto;
+}
+
+/* 
+@media (min-width: 500px) and (min-height: 400px) {
+    .Order {
+        width: 350px;
+        height: 300px;
+    }
+}
+
+@media (min-width: 500px) and (min-height: 401px) {
+    .Order {
+        width: 450px;
+        height: 400px;
+    }
+}
+
+@media (min-width: 1000px) and (min-height: 700px) {
+    .Order {
+        width: 700px;
+        height: 600px;
+    }
+} */
