--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,12 @@
 @font-face {
   font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Open Sans'), local('OpenSans'), url('./assets/fonts/OpenSans-Regular.ttf') format('truetype');
+  src: url('./assets/fonts/OpenSans-Regular.ttf');
 }
 
 @font-face {
   font-family: 'Open Sans';
-  font-style: bold;
-  font-weight: 700;
-  src: local('Open Sans'), local('OpenSans'), url('./assets/fonts/OpenSans-Bold.ttf') format('truetype');
+  font-weight: bold;
+  src: url('./assets/fonts/OpenSans-Bold.ttf');
 }
 
 body {
