--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -6,22 +6,28 @@
     padding-top: 16px;
 }
 
-.Input {
+.Input, .Textarea, .Select{
+    position: relative;
+    background-color: transparent;
     border: none;
     border-bottom: 1px solid #ccc;
     outline: none;
     width: 100%;
     font-size: 16px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: inherit;
+    padding: 0;
+    margin: 0;
+    z-index: 10;
 }
 
 .Label {
     position: absolute;
-    bottom: 3px;
+    top: 20px;
     color: #aaa;
     font-size: 16px;
     line-height: 1;
-    transition: all 0.3s ease-out;
+    transition: all 0.2s ease-out;
+    z-index: 0;
 }
 
 .Underline {
@@ -39,5 +45,5 @@
 
 .Wrapper[has-text] .Label {
     font-size: 12px;
-    bottom: 24px;
+    top: 5px;
 }
